Final changes before showtime

--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -292,7 +292,7 @@
     "response = openai.chat.completions.create(\n",
     "    model='gpt-4o',\n",
     "    messages=tell_a_joke,\n",
-    "    temperature=0.9\n",
+    "    temperature=1.0\n",
     ")\n",
     "print(response.choices[0].message.content)"
    ]
@@ -543,16 +543,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee81c5f7-1cb1-439e-b67a-46295ee7c89e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "call_gpt()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4f16d1f1-ea9c-45c2-9228-7f63d1b00a24",
    "metadata": {},
    "outputs": [],
@@ -645,6 +635,8 @@
    "id": "43b4f471-d5e0-4631-9cf1-520d1dc6e4da",
    "metadata": {},
    "source": [
+    "# Part 3\n",
+    "\n",
     "## Recap: first we tried Frontier LLMs through their chat interfaces\n",
     "## Then we called Cloud APIs\n",
     "## Now try the 3rd way to use LLMs - direct inference of Open Source Models running locally with Ollama\n",
@@ -789,7 +781,9 @@
    "id": "a5274ec2-4a42-431b-b4a1-e2874bc23c05",
    "metadata": {},
    "source": [
-    "# Using blazingly fast inference service Groq\n",
+    "## There are also Cloud API services like we used in Part 2 that allow us to run open-source models..\n",
+    "\n",
+    "## Like the blazingly fast inference service Groq\n",
     "\n",
     "We can also use the amazing inference platform Groq to run inference on large open-source models that would not fit on a local machine.\n",
     "\n",
