--- a/project8 - connect4/prototype.ipynb
+++ b/project8 - connect4/prototype.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e6da6609-8887-416f-ba9a-d08892fb5cee",
+   "metadata": {},
+   "source": [
+    "# Prototype Connect Four battle\n",
+    "\n",
+    "Pit LLMs against each other in a game of Connect Four"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7c154063-8f36-426f-ae54-346acc5ba58d",
@@ -9,8 +19,7 @@
    "source": [
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
-    "import json\n",
-    "from llm import LLM"
+    "import json"
    ]
   },
   {
@@ -73,8 +82,7 @@
     "                result += f'\"{pieces[self.cells[5-y][x]]}\", '\n",
     "            result = result[:-2] + '],\\n'\n",
     "        result = result[:-2]+'\\n}'\n",
-    "        return result\n",
-    "        "
+    "        return result  "
    ]
   },
   {
@@ -301,6 +309,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a3f6030-d6b9-4cc1-acb0-447c56873c19",
+   "metadata": {},
+   "source": [
+    "## A fancier version\n",
+    "\n",
+    "Basically the same code, but a bit more organized.. and with a Gradio UI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "71c72f43-24a5-4b83-a396-466a79e50d90",
@@ -313,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "520f6d8d-3254-4623-ae5a-1591b74a7c8e",
+   "id": "98d10ea7-aaf9-4264-bc91-258d5bef3029",
    "metadata": {},
    "outputs": [],
    "source": []
