--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -128,6 +128,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ab1369b-8029-4607-bfab-e228aa12dec2",
+   "metadata": {},
+   "source": [
+    "## Two purposes of these APIs:\n",
+    "\n",
+    "1. Illustrate the different uses of APIs\n",
+    "2. Experiment with some LLMs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d6b3506e-b46f-44f0-ba9b-6b002835d36a",
@@ -267,6 +278,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d11d54df-4b6c-4550-86f9-a3773ccca108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tell_a_joke = [\n",
+    "    {\"role\": \"user\", \"content\": \"How would you describe the color blue to someone who has never been able to see, in no more than 3 sentences.\"}\n",
+    "  ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e70cd59d-3efe-41e7-b149-ce56b9697a92",
    "metadata": {},
    "outputs": [],
@@ -304,11 +327,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# o1-mini\n",
+    "# o1\n",
     "\n",
     "response = openai.chat.completions.create(\n",
-    "    model='o1-mini',\n",
-    "    messages=[tell_a_joke[1]],\n",
+    "    model='o1-pro',\n",
+    "    messages=[tell_a_joke[0]],\n",
     ")\n",
     "print(response.choices[0].message.content)"
    ]
@@ -850,7 +873,7 @@
    "outputs": [],
    "source": [
     "stream = groq.chat.completions.create(\n",
-    "    model=\"deepseek-r1-distill-llama-70b\",\n",
+    "    model=\"llama-3.3-70b-versatile\",  # deepseek-r1-distill-llama-70b\n",
     "    messages=tell_a_joke,\n",
     "    stream=True\n",
     ")\n",
@@ -888,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
