--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ticket_prices = {\"london\": \"$799\", \"paris\": \"$899\", \"tokyo\": \"$1400\"}\n",
+    "ticket_prices = {\"london\": \"$799\", \"paris\": \"$899\", \"tokyo\": \"$1400\", \"sydney\": \"$2999\"}\n",
     "\n",
     "def get_ticket_price(destination_city):\n",
     "    print(f\"Tool get_ticket_price called for {destination_city}\")\n",
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_ticket_price(\"London\")"
+    "get_ticket_price(\"Sydney\")"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
