New course image

--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -275,6 +275,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The hardest question I could come up with\n",
+    "\n",
     "system_message = \"You are able to explain abstract concepts clearly and concisely, with powerful analogies\"\n",
     "\n",
     "user_prompt = \"In 1 sentence, describe a rainbow to someone who's never been able to see. \\\n",
@@ -371,6 +373,7 @@
    "outputs": [],
    "source": [
     "# o1\n",
+    "# o1 is a \"reasoning\" model that has been trained to think through it's answer before it replies..\n",
     "\n",
     "model_name = \"o1\"\n",
     "\n",
