Preparing for showtime

--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -149,11 +149,9 @@
     "\n",
     "import os\n",
     "import json\n",
-    "from dotenv import load_dotenv\n",
     "import requests\n",
+    "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
-    "from anthropic import Anthropic\n",
-    "import anthropic\n",
     "from IPython.display import Markdown, display, update_display"
    ]
   },
@@ -173,6 +171,7 @@
     "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
     "deepseek_api_key = os.getenv('DEEPSEEK_API_KEY')\n",
     "groq_api_key = os.getenv('GROQ_API_KEY')\n",
+    "grok_api_key = os.getenv('GROK_API_KEY')\n",
     "\n",
     "if openai_api_key:\n",
     "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
@@ -197,7 +196,12 @@
     "if groq_api_key:\n",
     "    print(f\"Groq API Key exists and begins {groq_api_key[:4]}\")\n",
     "else:\n",
-    "    print(\"Groq API Key not set (and this is optional)\")"
+    "    print(\"Groq API Key not set (and this is optional)\")\n",
+    "\n",
+    "if grok_api_key:\n",
+    "    print(f\"Grok API Key exists and begins {grok_api_key[:4]}\")\n",
+    "else:\n",
+    "    print(\"Grok API Key not set (and this is optional)\")"
    ]
   },
   {
@@ -209,7 +213,7 @@
     "\n",
     "We call Cloud APIs by making REST calls to an HTTP endpoint, passing in our keys.\n",
     "\n",
-    "For convenience, the labs like OpenAI have provided lightweight python client libraries that make the HTTP calls for us."
+    "For convenience, OpenAI has provided a lightweight python client library that makes the HTTP calls for us."
    ]
   },
   {
@@ -219,23 +223,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to OpenAI, Anthropic client libraries\n",
-    "# These are thin wrappers around calls to REST endpoints\n",
+    "# Connect to OpenAI client library\n",
+    "# A thin wrappes around calls to REST endpoints\n",
     "\n",
     "openai = OpenAI()\n",
-    "claude = Anthropic()\n",
     "\n",
     "# For Gemini, DeepSeek and Groq, we can use the OpenAI python client\n",
     "# Because Google and DeepSeek have endpoints compatible with OpenAI\n",
     "# And OpenAI allows you to change the base_url\n",
     "\n",
+    "anthropic_url = \"https://api.anthropic.com/v1/\"\n",
     "gemini_url = \"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
     "deepseek_url = \"https://api.deepseek.com\"\n",
     "groq_url = \"https://api.groq.com/openai/v1\"\n",
+    "grok_url = \"https://api.x.ai/v1\"\n",
     "\n",
+    "anthropic = OpenAI(api_key=anthropic_api_key, base_url=anthropic_url)\n",
     "gemini = OpenAI(api_key=google_api_key, base_url=gemini_url)\n",
     "deepseek = OpenAI(api_key=deepseek_api_key, base_url=deepseek_url)\n",
-    "groq = OpenAI(api_key=groq_api_key, base_url=groq_url)"
+    "groq = OpenAI(api_key=groq_api_key, base_url=groq_url)\n",
+    "grok = OpenAI(api_key=grok_api_key, base_url=grok_url)"
    ]
   },
   {
@@ -309,7 +316,7 @@
     "answers = []\n",
     "\n",
     "def record(model, reply):\n",
-    "    print(f\"Response from {model}:\\n\\n{reply}\\n\\nActual word count: {len(reply.split())}\")\n",
+    "    display(Markdown(f\"### Response from {model}:\\n\\n{reply}\\n\\n### Actual word count: {len(reply.split())}\"))\n",
     "    models.append(model)\n",
     "    answers.append(reply)"
    ]
@@ -321,9 +328,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPT-4o-mini\n",
+    "# GPT-4.1-mini\n",
     "\n",
-    "model_name = \"gpt-4o-mini\"\n",
+    "model_name = \"gpt-4.1-mini\"\n",
+    "\n",
+    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
+    "reply = response.choices[0].message.content\n",
+    "\n",
+    "record(model_name, reply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cdd2ee1-8b06-44a2-b4fe-164629d4c06d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPT-4.1-nano\n",
+    "\n",
+    "model_name = \"gpt-4.1-nano\"\n",
     "\n",
     "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -338,26 +362,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPT-4o\n",
+    "# GPT-4.1\n",
     "\n",
-    "model_name = \"gpt-4o\"\n",
-    "\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fffa000-30f5-49e3-aebb-16721d60d58d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPT-4.5\n",
-    "\n",
-    "model_name = \"gpt-4.5-preview\"\n",
+    "model_name = \"gpt-4.1\"\n",
     "\n",
     "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -390,9 +397,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# o3-mini\n",
+    "# o3\n",
     "\n",
-    "model_name = \"o3-mini\"\n",
+    "model_name = \"o3\"\n",
     "\n",
     "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -407,21 +414,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Claude 3.7 Sonnet\n",
+    "# Claude 4.0 Sonnet\n",
     "# API needs system message provided separately from user prompt\n",
     "# Also adding max_tokens\n",
     "\n",
-    "model_name = \"claude-3-7-sonnet-latest\"\n",
+    "model_name = \"claude-sonnet-4-20250514\"\n",
     "\n",
-    "message = claude.messages.create(\n",
-    "    model=model_name,\n",
-    "    max_tokens=200,\n",
-    "    temperature=0.7,\n",
-    "    system=challenge[0][\"content\"],\n",
-    "    messages=[challenge[1]]\n",
-    "    )\n",
+    "response = anthropic.chat.completions.create(model=model_name, messages=challenge)\n",
+    "reply = response.choices[0].message.content\n",
     "\n",
-    "reply = message.content[0].text\n",
     "record(model_name, reply)"
    ]
   },
@@ -432,9 +433,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gemini 2.0 Flash\n",
+    "# Gemini 2.5 Flash\n",
     "\n",
-    "model_name = \"gemini-2.0-flash\"\n",
+    "model_name = \"gemini-2.5-flash-preview-05-20\"\n",
+    "\n",
+    "response = gemini.chat.completions.create(model=model_name, messages=challenge)\n",
+    "reply = response.choices[0].message.content\n",
+    "\n",
+    "record(model_name, reply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a204e1bd-44c0-43c7-9ebc-05a366377050",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gemini 2.5 Pro\n",
+    "\n",
+    "model_name = \"gemini-2.5-pro-preview-06-05\"\n",
     "\n",
     "response = gemini.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -469,12 +487,12 @@
     "# Deepseek-R1\n",
     "# This takes too long! It can get stuck in a loop \n",
     "\n",
-    "# model_name = \"deepseek-reasoner\"\n",
+    "model_name = \"deepseek-reasoner\"\n",
     "\n",
-    "# response = deepseek.chat.completions.create(model=model_name, messages=challenge)\n",
-    "# reply = response.choices[0].message.content\n",
+    "response = deepseek.chat.completions.create(model=model_name, messages=challenge)\n",
+    "reply = response.choices[0].message.content\n",
     "\n",
-    "# record(model_name, reply)"
+    "record(model_name, reply)"
    ]
   },
   {
@@ -515,6 +533,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f4961c8-d0ed-465c-9df3-e6be869ded1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grok\n",
+    "\n",
+    "model_name = \"grok-3-latest\"\n",
+    "\n",
+    "response = grok.chat.completions.create(model=model_name, messages=challenge)\n",
+    "reply = response.choices[0].message.content\n",
+    "\n",
+    "record(model_name, reply)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5b629b7b-01d6-46e9-bd9f-b5c1ec563419",
    "metadata": {},
@@ -543,8 +578,8 @@
    "outputs": [],
    "source": [
     "!ollama pull llama3.2\n",
-    "!ollama pull gemma2\n",
-    "!ollama pull qwen2.5\n",
+    "!ollama pull gemma3\n",
+    "!ollama pull qwen3\n",
     "!ollama pull phi4\n",
     "!ollama pull deepseek-r1"
    ]
@@ -594,9 +629,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gemma2\n",
+    "# gemma3\n",
     "\n",
-    "model_name = \"gemma2\"\n",
+    "model_name = \"gemma3\"\n",
     "\n",
     "response = ollama.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -611,12 +646,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# qwen2.5\n",
+    "# qwen3\n",
     "\n",
-    "model_name = \"qwen2.5\"\n",
+    "model_name = \"qwen3\"\n",
     "\n",
     "response = ollama.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
+    "\n",
+    "if '</think>' in reply:\n",
+    "    reply = reply.split(\"</think>\")[1]\n",
     "\n",
     "record(model_name, reply)"
    ]
@@ -667,6 +705,7 @@
    "source": [
     "# So where are we?\n",
     "\n",
+    "print(len(models))\n",
     "print(models)\n",
     "print(answers)"
    ]
@@ -706,7 +745,7 @@
     "\n",
     "{challenge[1][\"content\"]}\n",
     "\n",
-    "Your job is to evaluate each response for clarity and strength of argument, and rank them in order of best to worst.\n",
+    "Your job is to evaluate each response for clarity and strength of argument and accuracy of word count, and rank them in order of best to worst.\n",
     "Respond with JSON, and only JSON, with the following format:\n",
     "{{\"results\": [\"best competitor number\", \"second best competitor number\", \"third best competitor number\", ...]}}\n",
     "\n",
@@ -753,10 +792,7 @@
    "outputs": [],
    "source": [
     "openai = OpenAI()\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"o3-mini\",\n",
-    "    messages=judge_messages,\n",
-    ")\n",
+    "response = openai.chat.completions.create(model=\"o3\",messages=judge_messages)\n",
     "results = response.choices[0].message.content\n",
     "print(results)"
    ]
@@ -800,7 +836,7 @@
     "# Have it stream back results in markdown\n",
     "\n",
     "stream = openai.chat.completions.create(\n",
-    "    model='gpt-4o-mini',\n",
+    "    model='gpt-4.1-mini',\n",
     "    messages=prompts,\n",
     "    stream=True\n",
     ")\n",
@@ -853,8 +889,8 @@
     "# Let's make a conversation between GPT-4o-mini and Claude-3-haiku\n",
     "# We're using cheap versions of models so the costs will be minimal\n",
     "\n",
-    "gpt_model = \"gpt-4o-mini\"\n",
-    "claude_model = \"claude-3-haiku-20240307\"\n",
+    "gpt_model = \"gpt-4.1-nano\"\n",
+    "claude_model = \"claude-3-5-haiku-latest\"\n",
     "\n",
     "gpt_system = \"You are a chatbot who is very argumentative; \\\n",
     "you disagree with anything in the conversation and you challenge everything, in a snarky way.\"\n",
@@ -879,11 +915,8 @@
     "    for gpt, claude in zip(gpt_messages, claude_messages):\n",
     "        messages.append({\"role\": \"assistant\", \"content\": gpt})\n",
     "        messages.append({\"role\": \"user\", \"content\": claude})\n",
-    "    completion = openai.chat.completions.create(\n",
-    "        model=gpt_model,\n",
-    "        messages=messages\n",
-    "    )\n",
-    "    return completion.choices[0].message.content"
+    "    response = openai.chat.completions.create(model=gpt_model, messages=messages)\n",
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -909,13 +942,8 @@
     "        messages.append({\"role\": \"user\", \"content\": gpt})\n",
     "        messages.append({\"role\": \"assistant\", \"content\": claude_message})\n",
     "    messages.append({\"role\": \"user\", \"content\": gpt_messages[-1]})\n",
-    "    message = claude.messages.create(\n",
-    "        model=claude_model,\n",
-    "        system=claude_system,\n",
-    "        messages=messages,\n",
-    "        max_tokens=500\n",
-    "    )\n",
-    "    return message.content[0].text"
+    "    response = anthropic.chat.completions.create(model=claude_model, messages=messages)\n",
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -1043,7 +1071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
