--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -44,7 +44,6 @@
     "import json\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
-    "import anthropic\n",
     "from IPython.display import Markdown, display\n",
     "import gradio as gr"
    ]
@@ -79,9 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For our chatbot we will select GPT-4o-mini due to the price efficiency\n",
+    "# For our chatbot we will select GPT-4.1-nano due to the price efficiency\n",
     "\n",
-    "MODEL = \"gpt-4o-mini\"\n",
+    "MODEL = \"gpt-4.1-nano\"\n",
     "openai = OpenAI()"
    ]
   },
@@ -112,7 +111,7 @@
    "outputs": [],
    "source": [
     "system_message = \"You are a helpful assistant for an Airline called FlightAI. \"\n",
-    "system_message += \"Give short, courteous answers, no more than 1 sentence. \"\n",
+    "system_message += \"Give short, witty, humorous answers, no more than 1 sentence. \"\n",
     "system_message += \"Always be accurate. If you don't know the answer, say so.\""
    ]
   },
@@ -191,7 +190,13 @@
     "## Tools\n",
     "\n",
     "Another incredibly powerful feature is the ability to give the LLM some \"tools\"  \n",
-    "Or functions it can call in order to do its job better"
+    "Or functions it can call in order to do its job better\n",
+    "\n",
+    "We are going to equip an LLM with the power to call a python function on our computer!\n",
+    "\n",
+    "It sounds spooky - OpenAI is going to be able to reach into our computer and call a function??\n",
+    "\n",
+    "The reality is rather more mundane.\n"
    ]
   },
   {
@@ -228,7 +233,7 @@
    "source": [
     "price_function = {\n",
     "    \"name\": \"get_ticket_price\",\n",
-    "    \"description\": \"Get the price of a return ticket to the destination city. Call this whenever you need to know the ticket price, for example when a customer asks 'How much is a ticket to this city'\",\n",
+    "    \"description\": \"Get the price of a return ticket to the destination city. Call this when you need to know a ticket price.\",\n",
     "    \"parameters\": {\n",
     "        \"type\": \"object\",\n",
     "        \"properties\": {\n",
@@ -430,7 +435,9 @@
     "\n",
     "1. Swap OpenAI for Claude to experience the changes in style\n",
     "2. Add another agent to the mix: have the chat respond in audio as well as text\n",
-    "3. Add another tool to simulate booking the flight"
+    "3. Add another tool to simulate booking the flight\n",
+    "\n",
+    "## And most importantly - apply this to your business!"
    ]
   },
   {
@@ -458,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
