--- a/project3 - Price intelligence/data.ipynb
+++ b/project3 - Price intelligence/data.ipynb
@@ -9,11 +9,13 @@
     "\n",
     "Please now head over to Google Colab:\n",
     "\n",
-    "Data curation: https://colab.research.google.com/drive/1cYLqi3_XlXzbzYMKd8j0VDycIKmWABAS  \n",
+    "Data curation: https://colab.research.google.com/drive/1wvAB7izqBRf6i6DuLJfy8xjKFvhpRJ_r?usp=sharing\n",
     "\n",
-    "Training: https://colab.research.google.com/drive/1TA_GwdrpWwRZfUw8I9y2fqqwFv9CBU1O  \n",
+    "Training: https://colab.research.google.com/drive/1wvAB7izqBRf6i6DuLJfy8xjKFvhpRJ_r?usp=sharing\n",
     "\n",
-    "Inference: https://colab.research.google.com/drive/1V6_F3r6Tge3EASyffdcWWMrA7vOzHNL8"
+    "Inference: https://colab.research.google.com/drive/1n8gg7gtF5tPmQcLNbe_yKDADOI6r6a3c?usp=sharing\n",
+    "\n",
+    "View in Weights & Biases: https://wandb.ai/ed-donner/home"
    ]
   },
   {
@@ -41,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
