--- a/project2 - Expert knowledge worker/expert.ipynb
+++ b/project2 - Expert knowledge worker/expert.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "# price is a factor for our company, so we're going to use a low cost model\n",
     "\n",
-    "MODEL = \"gpt-4o-mini\"\n",
+    "MODEL = \"gpt-4.1-mini\"\n",
     "db_name = \"vector_db\""
    ]
   },
@@ -430,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
