Updates before showtime

--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -284,11 +284,11 @@
    "source": [
     "# The hardest question I could come up with\n",
     "\n",
-    "system_message = \"You are able to explain abstract concepts clearly and concisely, with powerful analogies\"\n",
+    "system_message = \"You explain concepts concisely with powerful analogies\"\n",
     "\n",
-    "user_prompt = \"In 1 sentence, describe a rainbow to someone who's never been able to see. \\\n",
-    "Then in 1 sentence, describe the imaginary number i to someone who doesn't understand math. \\\n",
-    "Then in 1 sentence, find a connection between rainbows and imaginary numbers. \\\n",
+    "user_prompt = \"In 1 short sentence, describe a rainbow to someone who's never been able to see. \\\n",
+    "Then in 1 short sentence, describe the imaginary number i to someone who doesn't understand math. \\\n",
+    "Then in 1 short sentence, find a connection between rainbows and imaginary numbers. \\\n",
     "Then end by stating how many words are in your answer.\""
    ]
   },
@@ -319,6 +319,20 @@
     "    display(Markdown(f\"### Response from {model}:\\n\\n{reply}\\n\\n### Actual word count: {len(reply.split())}\"))\n",
     "    models.append(model)\n",
     "    answers.append(reply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7204aa1f-aef2-490e-8a68-7fca90ce40d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"gpt-4.1-mini\"\n",
+    "\n",
+    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
+    "reply = response.choices[0].message.content\n",
+    "record(model_name, reply)"
    ]
   },
   {
@@ -380,7 +394,7 @@
    "outputs": [],
    "source": [
     "# o1\n",
-    "# o1 is a \"reasoning\" model that has been trained to think through it's answer before it replies..\n",
+    "# o1 is a \"reasoning\" model that has been trained to think through its answer before it replies..\n",
     "\n",
     "model_name = \"o1\"\n",
     "\n",
@@ -397,9 +411,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# o3\n",
+    "# o4-mini\n",
     "\n",
-    "model_name = \"o3\"\n",
+    "model_name = \"o4-mini\"\n",
     "\n",
     "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -415,8 +429,7 @@
    "outputs": [],
    "source": [
     "# Claude 4.0 Sonnet\n",
-    "# API needs system message provided separately from user prompt\n",
-    "# Also adding max_tokens\n",
+    "# This is a hybrid model that can use thinking where necessary\n",
     "\n",
     "model_name = \"claude-sonnet-4-20250514\"\n",
     "\n",
@@ -435,7 +448,7 @@
    "source": [
     "# Gemini 2.5 Flash\n",
     "\n",
-    "model_name = \"gemini-2.5-flash-preview-05-20\"\n",
+    "model_name = \"gemini-2.5-flash\"\n",
     "\n",
     "response = gemini.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -452,7 +465,7 @@
    "source": [
     "# Gemini 2.5 Pro\n",
     "\n",
-    "model_name = \"gemini-2.5-pro-preview-06-05\"\n",
+    "model_name = \"gemini-2.5-pro\"\n",
     "\n",
     "response = gemini.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -487,12 +500,12 @@
     "# Deepseek-R1\n",
     "# This takes too long! It can get stuck in a loop \n",
     "\n",
-    "model_name = \"deepseek-reasoner\"\n",
+    "# model_name = \"deepseek-reasoner\"\n",
     "\n",
-    "response = deepseek.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
+    "# response = deepseek.chat.completions.create(model=model_name, messages=challenge)\n",
+    "# reply = response.choices[0].message.content\n",
     "\n",
-    "record(model_name, reply)"
+    "# record(model_name, reply)"
    ]
   },
   {
@@ -539,9 +552,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grok\n",
+    "# Grok 4\n",
     "\n",
-    "model_name = \"grok-3-latest\"\n",
+    "model_name = \"grok-4\"\n",
     "\n",
     "response = grok.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
@@ -578,10 +591,7 @@
    "outputs": [],
    "source": [
     "!ollama pull llama3.2\n",
-    "!ollama pull gemma3\n",
-    "!ollama pull qwen3\n",
-    "!ollama pull phi4\n",
-    "!ollama pull deepseek-r1"
+    "!ollama pull qwen3"
    ]
   },
   {
@@ -625,23 +635,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19dd56e3-c856-490f-b38a-aa68a5187dfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gemma3\n",
-    "\n",
-    "model_name = \"gemma3\"\n",
-    "\n",
-    "response = ollama.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "47da34ce-e7db-4a5b-a212-94c4c03b4107",
    "metadata": {},
    "outputs": [],
@@ -649,43 +642,6 @@
     "# qwen3\n",
     "\n",
     "model_name = \"qwen3\"\n",
-    "\n",
-    "response = ollama.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "if '</think>' in reply:\n",
-    "    reply = reply.split(\"</think>\")[1]\n",
-    "\n",
-    "record(model_name, reply)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c877bbcc-02e3-4490-a3cf-bd08b8157a9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# phi4\n",
-    "\n",
-    "model_name = \"phi4\"\n",
-    "\n",
-    "response = ollama.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14b51f11-50ee-4eab-8c3f-13b6c22386fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# deepseek-r1\n",
-    "\n",
-    "model_name = \"deepseek-r1\"\n",
     "\n",
     "response = ollama.chat.completions.create(model=model_name, messages=challenge)\n",
     "reply = response.choices[0].message.content\n",
