--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "# For our chatbot we will select GPT-4.1-nano due to the price efficiency\n",
     "\n",
-    "MODEL = \"gpt-4.1-nano\"\n",
+    "MODEL = \"gpt-4.1-mini\"\n",
     "openai = OpenAI()"
    ]
   },
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "system_message = \"You are a helpful assistant for an Airline called FlightAI. \"\n",
-    "system_message += \"Give short, witty, humorous answers, no more than 1 sentence. \"\n",
+    "system_message += \"Give short, snarky answers, no more than 1 sentence. \"\n",
     "system_message += \"Always be accurate. If you don't know the answer, say so.\""
    ]
   },
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ticket_prices = {\"london\": \"$799\", \"paris\": \"$899\", \"tokyo\": \"$1400\", \"sydney\": \"$2999\"}\n",
+    "ticket_prices = {\"london\": \"$799\", \"paris\": \"$899\", \"tokyo\": \"$1400\", \"sydney\": \"$2999\", \"germany\": \"$899\"}\n",
     "\n",
     "def get_ticket_price(destination_city):\n",
     "    print(f\"Tool get_ticket_price called for {destination_city}\")\n",
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_ticket_price(\"Sydney\")"
+    "get_ticket_price(\"Germany\")"
    ]
   },
   {
