--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -267,7 +267,7 @@
     "\n",
     "Conversations use this format:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "[\n",
     "    {\"role\": \"system\", \"content\": \"system message here\"},\n",
     "    {\"role\": \"user\", \"content\": \"user prompt here\"}\n",
@@ -302,7 +302,31 @@
     "challenge = [\n",
     "    {\"role\": \"system\", \"content\": system_message},\n",
     "    {\"role\": \"user\", \"content\": user_prompt}\n",
-    "  ]"
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25274e64-580b-4684-82dd-7f3253d9154e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"gpt-5-mini\"\n",
+    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
+    "reply = response.choices[0].message.content\n",
+    "print(reply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c3df74c-bb00-4d0b-954b-144f059ad09f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = []\n",
+    "answers = []"
    ]
   },
   {
@@ -312,11 +336,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = []\n",
-    "answers = []\n",
-    "\n",
-    "def record(model, reply):\n",
-    "    display(Markdown(f\"### Response from {model}:\\n\\n{reply}\\n\\n### Actual word count: {len(reply.split())}\"))\n",
+    "def record(model, stream):\n",
+    "    prefix = f\"### Response from {model}:\\n\\n\"\n",
+    "    reply = \"\"\n",
+    "    display_handle = display(Markdown(prefix), display_id=True)\n",
+    "    for chunk in stream:\n",
+    "        reply += chunk.choices[0].delta.content or ''\n",
+    "        update_display(Markdown(prefix+reply), display_id=display_handle.display_id)\n",
+    "    words = reply.split('</think>')[1] if '</think>' in reply else reply\n",
+    "    reply += f\"\\n\\n#### Calculated true word count: {len(words.split())}\"\n",
+    "    update_display(Markdown(prefix+reply), display_id=display_handle.display_id)\n",
+    "    \n",
     "    models.append(model)\n",
     "    answers.append(reply)"
    ]
@@ -328,28 +358,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"gpt-4.1-mini\"\n",
+    "model_name = \"gpt-5-mini\"\n",
     "\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "record(model_name, reply)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e70cd59d-3efe-41e7-b149-ce56b9697a92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPT-4.1-mini\n",
-    "\n",
-    "model_name = \"gpt-4.1-mini\"\n",
-    "\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -359,14 +371,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPT-4.1-nano\n",
+    "# GPT-5-nano\n",
     "\n",
-    "model_name = \"gpt-4.1-nano\"\n",
+    "model_name = \"gpt-5-nano\"\n",
     "\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -376,32 +386,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPT-4.1\n",
+    "# GPT-5\n",
     "\n",
-    "model_name = \"gpt-4.1\"\n",
+    "model_name = \"gpt-5\"\n",
     "\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d23b64f8-86e2-4cc1-9cd1-03ac53287f8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# o1\n",
-    "# o1 is a \"reasoning\" model that has been trained to think through its answer before it replies..\n",
-    "\n",
-    "model_name = \"o1\"\n",
-    "\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -415,10 +405,8 @@
     "\n",
     "model_name = \"o4-mini\"\n",
     "\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -428,15 +416,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Claude 4.0 Sonnet\n",
-    "# This is a hybrid model that can use thinking where necessary\n",
+    "# Claude 4.1 Opus\n",
     "\n",
-    "model_name = \"claude-sonnet-4-20250514\"\n",
+    "model_name = \"claude-opus-4-1-20250805\"\n",
     "\n",
-    "response = anthropic.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = anthropic.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -450,10 +435,8 @@
     "\n",
     "model_name = \"gemini-2.5-flash\"\n",
     "\n",
-    "response = gemini.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = gemini.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -467,10 +450,8 @@
     "\n",
     "model_name = \"gemini-2.5-pro\"\n",
     "\n",
-    "response = gemini.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = gemini.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -484,10 +465,8 @@
     "\n",
     "model_name = \"deepseek-chat\"\n",
     "\n",
-    "response = deepseek.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = deepseek.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -511,18 +490,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8a1d95fe-2ea5-43d9-bc3a-109c75d6058c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grok from x.ai\n",
+    "\n",
+    "model_name = \"grok-4\"\n",
+    "\n",
+    "stream = grok.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ecd5a6a5-7e91-4deb-a62e-378d1949729b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Groq - llama-3.3-70b-versatile\n",
+    "# Groq - llama-4-maverick 400B parameters in a mixture of experts \n",
     "\n",
-    "model_name = \"llama-3.3-70b-versatile\"\n",
+    "model_name = \"meta-llama/llama-4-maverick-17b-128e-instruct\"\n",
     "\n",
-    "response = groq.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = groq.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -536,30 +528,21 @@
     "\n",
     "model_name = \"deepseek-r1-distill-llama-70b\"\n",
     "\n",
-    "response = groq.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "if '</think>' in reply:\n",
-    "    reply = reply.split('</think>')[1]\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = groq.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4961c8-d0ed-465c-9df3-e6be869ded1c",
+   "id": "5db74d2f-8dfe-402f-9e74-a1c1d2a6fc7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grok 4\n",
+    "model_name = \"openai/gpt-oss-120b\"\n",
     "\n",
-    "model_name = \"grok-4\"\n",
-    "\n",
-    "response = grok.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = groq.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -591,7 +574,7 @@
    "outputs": [],
    "source": [
     "!ollama pull llama3.2\n",
-    "!ollama pull qwen3"
+    "!ollama pull gpt-oss"
    ]
   },
   {
@@ -626,10 +609,8 @@
     "\n",
     "model_name = \"llama3.2\"\n",
     "\n",
-    "response = ollama.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = ollama.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -639,17 +620,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# qwen3\n",
+    "# OpenAI OSS - the 20B version, not 120B, running on my computer!!\n",
     "\n",
-    "model_name = \"qwen3\"\n",
+    "model_name = \"gpt-oss\"\n",
     "\n",
-    "response = ollama.chat.completions.create(model=model_name, messages=challenge)\n",
-    "reply = response.choices[0].message.content\n",
-    "\n",
-    "if '</think>' in reply:\n",
-    "    reply = reply.split(\"</think>\")[1]\n",
-    "\n",
-    "record(model_name, reply)"
+    "stream = ollama.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "record(model_name, stream)"
    ]
   },
   {
@@ -686,7 +662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(together)"
+    "display(Markdown(together))"
    ]
   },
   {
@@ -705,7 +681,7 @@
     "Respond with JSON, and only JSON, with the following format:\n",
     "{{\"results\": [\"best competitor number\", \"second best competitor number\", \"third best competitor number\", ...]}}\n",
     "\n",
-    "Here are the responses from each competitor:\n",
+    "Here are the responses from each competitor; after each response, the actual word count of their answer is given:\n",
     "\n",
     "{together}\n",
     "\n",
@@ -719,7 +695,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(judge)"
+    "display(Markdown(judge))"
    ]
   },
   {
@@ -747,8 +723,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai = OpenAI()\n",
-    "response = openai.chat.completions.create(model=\"o3\",messages=judge_messages)\n",
+    "response = openai.chat.completions.create(model=\"gpt-5\",messages=judge_messages)\n",
+    "results = response.choices[0].message.content\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ecb8cb-3d05-4cd7-a298-a519d289ac62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = groq.chat.completions.create(model=\"openai/gpt-oss-120b\",messages=judge_messages)\n",
     "results = response.choices[0].message.content\n",
     "print(results)"
    ]
@@ -765,44 +752,6 @@
     "for index, result in enumerate(ranks):\n",
     "    competitor = models[int(result)-1]\n",
     "    print(f\"Rank {index+1}: {competitor}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d9e4982-c3af-48fd-8ce9-b44a86898800",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To be serious! GPT-4o-mini with a proper question\n",
-    "\n",
-    "prompts = [\n",
-    "    {\"role\": \"system\", \"content\": \"You are a knowledgable assistant, and you respond in markdown\"},\n",
-    "    {\"role\": \"user\", \"content\": \"How do I choose the right LLM for a task? Please respond in markdown.\"}\n",
-    "  ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d08a70a-f0d8-4317-8690-c12933e0d7ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Have it stream back results in markdown\n",
-    "\n",
-    "stream = openai.chat.completions.create(\n",
-    "    model='gpt-4.1-mini',\n",
-    "    messages=prompts,\n",
-    "    stream=True\n",
-    ")\n",
-    "\n",
-    "reply = \"\"\n",
-    "display_handle = display(Markdown(\"\"), display_id=True)\n",
-    "for chunk in stream:\n",
-    "    reply += chunk.choices[0].delta.content or ''\n",
-    "    reply = reply.replace(\"```\",\"\").replace(\"markdown\",\"\")\n",
-    "    update_display(Markdown(reply), display_id=display_handle.display_id)"
    ]
   },
   {
